<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <PreferenceCategory android:title="@string/notifications">

        <CheckBoxPreference
            android:key="all_preference_checkbox"
            android:summary="@string/all_notifications"
            android:title="@string/notifications"
            app:isPreferenceVisible="false"/>

        <CheckBoxPreference
            android:key="new_preference_checkbox"
            android:summary="@string/new_notifications_summary"
            android:title="@string/new_notifications" />

        <CheckBoxPreference
            android:key="user_preference_checkbox"
            android:summary="@string/user_notifications_summary"
            android:title="@string/user_notifications"
            app:isPreferenceVisible="false"/>
        <DropDownPreference
            android:entries="@array/dropdown_entries"
            android:entryValues="@array/dropdown_values"
            android:key="dropdown_preference"
            android:title="@string/repeat_mode"
            android:summary="@string/choose_repeating_time_ptv"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/search_settings">

        <SeekBarPreference
            android:defaultValue="120"
            android:key="age_preference_seekbar"
            android:max="120"
            android:summary="@string/choose_age_range_ptv"
            android:title="@string/age_range_ptv"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:defaultValue="50"
            android:key="range_preference_seekbar"
            android:max="50"
            android:summary="@string/choose_search_range_ptv"
            android:title="@string/search_range_ptv"
            app:showSeekBarValue="true" />



    </PreferenceCategory>


</PreferenceScreen>

