<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>

        <item
            android:id="@+id/item_login"
            android:title="@string/login_tv"/>

        <item android:id="@+id/item_sign_up"
            android:title="@string/sign_up_dnv"/>

    </group>

    <group>
        <item android:id="@+id/item_users"
            android:title="@string/users_dnv"
            android:visible="false"
            />

        <item android:id="@+id/item_search"
            android:title="@string/search_dnv"
            android:visible="false"/>

        <item android:id="@+id/item_profile"
            android:title="@string/profile_dnv"
            android:visible="false"/>
        <item android:id="@+id/item_confirmations"
            android:title="@string/confirmations_dnv"
            android:visible="false"/>
        <item android:id="@+id/item_messages"
            android:title="@string/messages_dnv"
            android:visible="false"/>
        <item android:id="@+id/item_settings"
            android:title="@string/settings_dnv"
            android:visible="true"/>


        <item android:id="@+id/item_logout"
            android:title="@string/log_out_dnv"
            android:visible="false"/>
    </group>

</menu>