<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        >




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryWhite"
            android:orientation="vertical"
            android:translationY="-50dp"
            android:layout_below="@+id/profileIv"
            android:paddingTop="70dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/profile_name_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name_tv"
                    android:textColor="@color/colorBlack"
                    android:textSize="23sp"
                    android:layout_weight="3"
                    />
                <TextView
                    android:id="@+id/profile_age_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/age_tv"
                    android:layout_weight="1"
                    android:gravity="center"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/profile_email_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_tv"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/prof_max_radius_txt"
                    android:textColor="@color/colorBlack"
                    />
                <TextView
                    android:id="@+id/profile_range_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/max_range_tv"
                    android:layout_weight="1"
                    android:gravity="center"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/prof_preferred_loc"
                    android:layout_weight="3"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile_edit_location_btn"
                    android:text="@string/edit_location_btn"
                    android:background="@drawable/generic_btn_selector"
                    android:textColor="#FFFFFF"

                    />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/location_result"
                android:text="@string/location_result_tv"
                android:background="@color/colorPrimaryBright"
                android:padding="3dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/prof_my_skills_txt"
                        android:textColor="@color/colorBlack"
                        android:layout_weight="1"
                        />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/profile_edit_skills_btn"
                        android:text="@string/edit_skills_btn"
                        android:background="@drawable/generic_btn_selector"
                        android:textColor="#FFFFFF"
                        />


                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile_skill_recycler"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/prof_learn_txt"
                        android:textColor="@color/colorBlack"
                        android:layout_weight="1"
                        />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/profile_edit_learn_btn"
                        android:text="@string/edit_skills_btn"
                        android:background="@drawable/generic_btn_selector"
                        android:textColor="#FFFFFF"

                        />

                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile_learn_recycler"
                    />
            </LinearLayout>


        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profileIv"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_user"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            />

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>


