<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/signup_inst_txt"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimaryWhite"
            android:padding="20dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/whats_your_age_tv"
                    android:layout_weight="5"
                    android:textColor="@color/colorBlack"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:id="@+id/signup_age_tv"
                    android:text="18"
                    android:textColor="@color/colorBlack"
                    />
            </LinearLayout>
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_age_seekbar"
                android:max="102"
                android:progress="0"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/how_far_range_tv"
                    android:layout_weight="7"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:id="@+id/signup_range_tv"
                    android:text="50"
                    android:textColor="@color/colorBlack"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/km_tv"
                    android:textColor="@color/colorBlack"
                    />
            </LinearLayout>
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_range_seekbar"
                android:max="9"
                android:progress="9"

                />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimaryWhite"
            android:padding="20dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/preferred_meeting_location_tv"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack"
                    android:layout_gravity="center_vertical"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add_location"
                    android:id="@+id/signup_choose_location"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:paddingTop="10dp"
                android:layout_marginStart="5dp"
                android:id="@+id/signup_location_result_tv"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup_location_tv"
            android:visibility="gone"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/my_skills_tv"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/colorBlack"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add"
                    android:id="@+id/signup_add_myskill"
                    />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:id="@+id/signup_skill_recycler"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="@color/colorPrimaryWhite"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_learn_txt"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/colorBlack"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add"
                    android:id="@+id/signup_add_learn"
                    />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_learn_recycler"
                android:paddingStart="5dp"
                />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_btn"
            android:id="@+id/signup_save_btn"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="10dp"
            android:background="@drawable/generic_btn_selector"
            android:textColor="#FFFFFF"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />


    </LinearLayout>
</androidx.core.widget.NestedScrollView>
